ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  namespace: default
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - wisecow.local.com
    secretName: wisecow-tls
  rules:
  - host: wisecow.local.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wisecow-service
            port:
              number: 4499
